--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,190 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="73" data-price="18.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2z6xrc1"><img src="https://m.media-amazon.com/images/I/71Bs9VH4g9L._SR400,400_.jpg" alt="Laptop Tote Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>73% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2z6xrc1">Laptop Tote Bag,Fits 15.6-17 Inch Laptop Briefcase for Women,Womens Lightweight Water Resistant Nylon Tote Bag Shoulder Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.90</span><span class="ori_price">$69.99</span></address>
+      <textarea readonly="readonly" class="code_area">73DVQ8M6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>73% off at $69.99</strong> with promo code: <strong class="m_codes">73DVQ8M6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2z6xrc1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H8cHoU"><img src="https://m.media-amazon.com/images/I/51MAeJfHMWL._SR400,400_.jpg" alt="Vyaime USB Car Essential Oil Diffuser" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H8cHoU">Vyaime USB Car Essential Oil Diffuser Home Humidifier Air Freshener,7 Colors LED Light 200mL Big Volume Aromatherapy for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">3074FZVO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $19.99</strong> with promo code: <strong class="m_codes">3074FZVO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H8cHoU">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="19.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z7uJxB"><img src="https://m.media-amazon.com/images/I/61kbkcFTHRL._SR400,400_.jpg" alt="ZLOT Vertical Gaming Mouse" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z7uJxB">ZLOT Vertical Gaming Mouse, Wired RGB Ergonomic USB Joystick Programmable Laser Gaming Mice,6+1 Design,11 Buttons,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.49</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">35FU3AWU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $29.99</strong> with promo code: <strong class="m_codes">35FU3AWU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z7uJxB">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TFo7p9"><img src="https://m.media-amazon.com/images/I/71cty1gGEtL._SR400,400_.jpg" alt="HBorna iPad 6th Generation case" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2TFo7p9">HBorna iPad 6th Generation case, iPad Air, iPad Air 2, Full Body Protective PU Leather with Hand Strap, Auto Sleep Cover...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$11.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">206NSAZ4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $11.99</strong> with promo code: <strong class="m_codes">206NSAZ4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2TFo7p9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="4.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KChDVa"><img src="https://m.media-amazon.com/images/I/61ANmJV3FML._SR400,400_.jpg" alt="HBorna Case for New All Screen iPad Pro 11" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KChDVa">HBorna Case for New All Screen iPad Pro 11 2018 (3rd Generation) with Multiple Angles, Auto Wake/Sleep...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.20</span><span class="ori_price">$13.99</span></address>
+      <textarea readonly="readonly" class="code_area">70ZNSZDQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $13.99</strong> with promo code: <strong class="m_codes">70ZNSZDQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KChDVa">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N4S9S0"><img src="https://m.media-amazon.com/images/I/61Kdbsl-LLL._SR400,400_.jpg" alt="TENMOS X96 Wireless Rechargeable Gaming Mouse" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N4S9S0">TENMOS X96 Wireless Rechargeable Gaming Mouse USB Optical LED Silent Computer Mouse Compatible with Laptop/PC/Notebook,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">60UB5L5L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $14.99</strong> with promo code: <strong class="m_codes">60UB5L5L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2N4S9S0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="44.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z9v6aW"><img src="https://m.media-amazon.com/images/I/61eUaMiPGGL._SR400,400_.jpg" alt="Men's Messenger Bag Waterproof Canvas Laptop Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z9v6aW">Men's Messenger Bag Waterproof Canvas Laptop Bag 15.6 Inch Briefcase Case Genuine Leather Large Satchel Shoulder Bag (Dark Blue)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$44.99</span><span class="ori_price">$59.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div> 
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">25MTRH4Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $59.99</strong> with promo code: <strong class="m_codes">25MTRH4Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 11, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z9v6aW">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TBkD6Z"><img src="https://m.media-amazon.com/images/I/61I9syN4ezL._SR400,400_.jpg" alt="Vapeonly Wireless Earbuds Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2TBkD6Z">Vapeonly Wireless Earbuds Bluetooth Headphones Waterproof V5.0 Portable Earphone Stereo Sound Handfree Sports Headset W/Charger Box (White)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.59</span><span class="ori_price">$27.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30VPNV4U</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $27.99</strong> with promo code: <strong class="m_codes">30VPNV4U</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2TBkD6Z">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2yXeuZx"><img src="https://m.media-amazon.com/images/I/61NQ-wHEYaL._SR400,400_.jpg" alt="True Wireless Earbuds, BassPal Bluetooth" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2yXeuZx">True Wireless Earbuds, BassPal Bluetooth 5.0 Headphones TWS in-Ear Mini Headset w/Mic IPX7 Waterproof, Deep Bass 3D Stereo Sound,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.99</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">458JJ6HJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $39.99</strong> with promo code: <strong class="m_codes">458JJ6HJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2yXeuZx">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="28.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YOg0wc"><img src="https://m.media-amazon.com/images/I/61aSUpyzJBL._SR400,400_.jpg" alt="Wireless Earbuds Newmsnr True Wireless Earbuds" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YOg0wc">Wireless Earbuds Newmsnr True Wireless Earbuds Bluetooth 5.0 + EDR Headset Waterproof IPX7 Touch Control Hi-Fi Wireless...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.50</span><span class="ori_price">$56.99</span></address>
+      <textarea readonly="readonly" class="code_area">50QGPEJ8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $56.99</strong> with promo code: <strong class="m_codes">50QGPEJ8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YOg0wc">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="52" data-price="9.12">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/31JCPhx"><img src="https://m.media-amazon.com/images/I/61O77bRX-4L._SR400,400_.jpg" alt="Diffuser for Essential Oils" /></a>
