--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -516,7 +516,7 @@
 
 
 /* Begin Promotion */
-.promotions{margin-bottom:200px;font-family: 'Montserrat', sans-serif;color:#616161;}
+.promotions{font-family: 'Montserrat', sans-serif;color:#616161;}
 .promotions .featured .sm_pc .guide_controll button{float:left;width:70px;line-height:60px;}
 .promotions .featured .sm_pc .guide_controll button.top_10{width:123px;}
 .promotions .featured .sm_pc .amzpromo button{width:145px;}
