--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,98 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="35" data-price="13.64">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33xSVwN"><img src="https://m.media-amazon.com/images/I/81x9RV1YAtL._SR400,400_.jpg" alt="Venture Pal Lightweight Packable Durable Travel Hiking Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33xSVwN">Venture Pal Lightweight Packable Durable Travel Hiking Backpack Daypack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.64</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">35AZ4FWH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $20.99</strong> with promo code: <strong class="m_codes">35AZ4FWH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33xSVwN">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YRKGwO"><img src="https://m.media-amazon.com/images/I/71ZUN77JKwL._SR400,400_.jpg" alt="KAMRE Upgraded 1080P WiFi Hidden Spy Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YRKGwO">KAMRE Upgraded 1080P WiFi Hidden Spy Camera Clock Video Recorder Wireless IP Camera with Night Vision and Motion Detection...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$49.99</span></address>
+      <textarea readonly="readonly" class="code_area">60E53XEB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $49.99</strong> with promo code: <strong class="m_codes">60E53XEB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YRKGwO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="79.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Gi8mF"><img src="https://m.media-amazon.com/images/I/71WWuoqSxGL._SR400,400_.jpg" alt="Feiyu VLOG Pocket a Pocket Sized Foldable..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Gi8mF">Feiyu VLOG Pocket a Pocket Sized Foldable 3 axis Smartphone Handheld Gimbal Stabilizer for iPhone Xs Max Xr X 8,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$79.20</span><span class="ori_price">$99.00</span></address>
+      <textarea readonly="readonly" class="code_area">2054WYN8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $99.00</strong> with promo code: <strong class="m_codes">2054WYN8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Gi8mF">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H6QIyM"><img src="https://m.media-amazon.com/images/I/51cCDx169RL._SR400,400_.jpg" alt="Pet Dog Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H6QIyM">Pet Dog Camera, TOOGE Home WiFi Security Camera FHD Surveillance Baby Monitor Motion Detection with Night Vision...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.19</span><span class="ori_price">$36.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40L1YI44</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $36.99</strong> with promo code: <strong class="m_codes">40L1YI44</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H6QIyM">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="60.13">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KLV27C"><img src="https://m.media-amazon.com/images/I/71SDoGZWcDL._SR400,400_.jpg" alt="MerryLife Weighted Blanket" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KLV27C">MerryLife Weighted Blanket 15 lbs 60" X 80" Queen Size | Duvet Cover Removable | Glass Beads Filling Heavy Blanket Adult Navy</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$60.13</span><span class="ori_price">$85.90</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">3083SFUD</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $85.90</strong> with promo code: <strong class="m_codes">3083SFUD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KLV27C">Use Code at Amazon</a></div>
+</div>
+ 
+
 <div class="card clearfix" data-score="73" data-price="18.90">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2z6xrc1"><img src="https://m.media-amazon.com/images/I/71Bs9VH4g9L._SR400,400_.jpg" alt="Laptop Tote Bag" /></a>
