--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 
 
   <%= yield %> 
-
+  <%= render 'shared/footer2' %>
    
   <%= javascript_include_tag 'application' %>
    <!-- for Isotope -->
