--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -44,7 +44,7 @@
   .codes .rt_cnt .sort_box ul li{float:left;width:100px;margin:0 5px;}
   .codes .rt_cnt .sort_box ul li a{font-size:20px;font-family: 'Anton', sans-serif;line-height:1.1;text-decoration:none;color:#000;display:block;text-align:center;padding:5px;}
   .codes .rt_cnt .sort_box ul li a:hover{background:#000;color:#fff;}
-  .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
+  .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;}
   .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
